# phimath

./: CMakeLists.txt  README.md
include/: arithmetic.hpp  vec3.hpp
include/phimath/: arithmetic.hpp  vec3.hpp
tests/: CMakeLists.txt  test-vec3.cpp
